trybuild_tests/runtime/u0_cannot_call_expose_secret.stderr
error[E0599]: the method `expose_secret` exists for struct `RTSecret<isize, UTerm>`, but its trait bounds were not satisfied
  --> trybuild_tests/runtime/u0_cannot_call_expose_secret.rs:14:28
   |
14 |           let _ = secret_one.expose_secret(|exposed_secret| {
   |                   -----------^^^^^^^^^^^^^ method cannot be called on `RTSecret<isize, UTerm>` due to unsatisfied trait bounds
   |
  ::: $CARGO/typenum-1.17.0/src/uint.rs
   |
   |   pub struct UTerm;
   |   ---------------- doesn't satisfy `<UTerm as IsGreater>::Output = B1`
   |
  ::: src/runtime/secret.rs
   |
   | / pub struct RTSecret<
   | |     #[cfg(feature = "zeroize")] T: Zeroize,
   | |     #[cfg(not(feature = "zeroize"))] T,
   | |     MEC: ChooseMinimallyRepresentableUInt + Unsigned,
   | | >(T, Cell<<MEC as ChooseMinimallyRepresentableUInt>::Output>);
   | |_- doesn't satisfy `_: RTExposeSecret<'_, &isize, UTerm>`
   |
   = note: the following trait bounds were not satisfied:
           `<UTerm as IsGreater>::Output = B1`
           which is required by `RTSecret<isize, UTerm>: RTExposeSecret<'_, &isize, UTerm>`
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
1  + use sosecrets_rs::runtime::traits::RTExposeSecretUnchecked;
   |

error[E0599]: the method `expose_secret` exists for struct `RTSecret<i32, UTerm>`, but its trait bounds were not satisfied
  --> trybuild_tests/runtime/u0_cannot_call_expose_secret.rs:31:30
   |
31 |           let _ = secret_three.expose_secret(|exposed_secret| {
   |                   -------------^^^^^^^^^^^^^ method cannot be called on `RTSecret<i32, UTerm>` due to unsatisfied trait bounds
   |
  ::: $CARGO/typenum-1.17.0/src/uint.rs
   |
   |   pub struct UTerm;
   |   ---------------- doesn't satisfy `<UTerm as IsGreater>::Output = B1`
   |
  ::: src/runtime/secret.rs
   |
   | / pub struct RTSecret<
   | |     #[cfg(feature = "zeroize")] T: Zeroize,
   | |     #[cfg(not(feature = "zeroize"))] T,
   | |     MEC: ChooseMinimallyRepresentableUInt + Unsigned,
   | | >(T, Cell<<MEC as ChooseMinimallyRepresentableUInt>::Output>);
   | |_- doesn't satisfy `_: RTExposeSecret<'_, &i32, UTerm>`
   |
   = note: the following trait bounds were not satisfied:
           `<UTerm as IsGreater>::Output = B1`
           which is required by `RTSecret<i32, UTerm>: RTExposeSecret<'_, &i32, UTerm>`
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
1  + use sosecrets_rs::runtime::traits::RTExposeSecretUnchecked;
   |
